# turnstart-studio

./: CMakeLists.txt  README.md  SetFiles.cpp  main.cpp  setting.cpp  setting.h  simulation.h  welcome.h
RailwaySystemSimulationSoftware/sources/: main.cpp
RailwaySystemSimulationSoftware/sources/Basic/: basic.h
RailwaySystemSimulationSoftware/sources/SetFiles/: SetFiles.h
RailwaySystemSimulationSoftware/sources/Welcome/: welcome.cpp
